# Currency_browser

./: README.MD
backend/: .flake8  .gitignore  pyproject.toml
backend/config/: settings.py
backend/currency/: admin.py  models.py
backend/currency/migrations/: 0001_initial.py  0002_remove_currencyname_currency_names_and_more.py  0003_remove_currencydate_currency_names_and_more.py  0004_alter_currencydate_date.py
backend/users/migrations/: 0001_initial.py
