[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Maciej Rumian <maciej.rumian2@gmail.com>"]
license = "Beerware"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.1"
pytest = "^7.3.1"
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"
django-sphinxdoc = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = ['E231', 'E241', 'F401']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 120
count = true
